--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "dayjs": "^1.11.11",
     "embla-carousel-react": "^8.5.1",
     "input-otp": "^1.4.1",
+    "json-edit-react": "^1.17.1",
     "lucide-react": "^0.372.0",
     "next": "15.0.3",
     "next-auth": "^4.24.7",
