--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ NEXT_PUBLIC_API_URL=your_api_url
 NEXT_PUBLIC_GA_ID=your_google_analytics_id
 NEXT_PUBLIC_ADSENSE_ID=your_adsense_id
 SENTRY_AUTH_TOKEN=
+NEXT_PUBLIC_BASE_URL=https://rocksdev.tools
