--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.2.0",
+    "@dnd-kit/sortable": "^9.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.9.1",
     "@next/third-parties": "^15.0.3",
     "@radix-ui/react-accordion": "^1.2.1",
@@ -55,6 +59,7 @@
     "input-otp": "^1.4.1",
     "json-edit-react": "^1.17.1",
     "lucide-react": "^0.372.0",
+    "motion": "12.0.0-alpha.2",
     "next": "15.0.3",
     "next-auth": "^4.24.7",
     "next-intl": "^3.23.5",
