--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@sentry/nextjs": "^8.41.0",
     "@tanstack/react-table": "^8.16.0",
     "@vercel/analytics": "^1.4.1",
+    "@vercel/og": "^0.6.4",
     "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.1",
