--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "input-otp": "^1.4.1",
     "js-cookie": "^3.0.5",
     "json-edit-react": "^1.17.1",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.372.0",
     "motion": "12.0.0-alpha.2",
     "next": "15.0.3",
@@ -70,8 +71,10 @@
     "react": "19.0.0-rc.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0-rc.1",
+    "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
+    "react-image-crop": "^11.0.7",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
