--- a/package.json
+++ b/package.json
@@ -77,9 +77,17 @@
     "react-image-crop": "^11.0.7",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.13.3",
+    "rehype-raw": "^7.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.1",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "unified": "^11.0.5",
     "vaul": "^1.1.1",
     "zod": "^3.23.8"
   },
