--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "cmdk": "1.0.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
+    "dexie": "^4.0.10",
     "embla-carousel-react": "^8.5.1",
     "fuse.js": "^7.0.0",
     "input-otp": "^1.4.1",
