--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ NEXT_PUBLIC_GA_ID=your_google_analytics_id
 NEXT_PUBLIC_ADSENSE_ID=your_adsense_id
 SENTRY_AUTH_TOKEN=
 NEXT_PUBLIC_BASE_URL=https://rocksdev.tools
+REDIS_KV_REST_API_TOKEN=
+REDIS_KV_REST_API_URL=
+OPENROUTER_API_KEY=
