--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@sentry/nextjs": "^8.41.0",
     "@tanstack/react-table": "^8.16.0",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.34.3",
     "@vercel/analytics": "^1.4.1",
     "@vercel/og": "^0.6.4",
     "@vercel/speed-insights": "^1.1.0",
