--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "jszip": "^3.10.1",
     "lucide-react": "^0.372.0",
     "motion": "12.0.0-alpha.2",
-    "next": "15.0.3",
+    "next": "15.0.5",
     "next-auth": "^4.24.7",
     "next-intl": "^3.23.5",
     "next-themes": "^0.4.3",
@@ -108,5 +108,6 @@
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.14",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@10.16.1+sha512.0e155aa2629db8672b49e8475da6226aa4bdea85fdcdfdc15350874946d4f3c91faaf64cbdc4a5d1ab8002f473d5c3fcedcd197989cf0390f9badd3c04678706"
 }
